2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/caption.c: New file.
	* src/caption.c: Likewise.
	* src/Makefile.am (starling_SOURCES): Add caption.h and caption.c.
	* src/starling.c: Include "caption.h".
	(struct _Starling): Add field caption.
	(title_data_func): Use caption_render to generate the caption.
	(starling_run): Create ST->CAPTION.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (library_button_press_event): Correctly set
	FIRST_TITLE and FIRST_SOURCE.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add fields rating and
	rating_change_signal_id.
	(set_title): Get the song's rating and set ST->RATING accordingly.
	(rating): New function.
	(starling_run): Create a combo box for the ratings.  Attach the
	"changed" signal to rating.  Save the signal id in
	ST->RATING_CHANGE_SIGNAL_ID.
	* src/search.y (expand_term): Treat a word with the "rating:"
	prefix as a request to search on the rating.

2008-09-30  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (enum mdb_fields): Add MDB_RATING.
	(music_db_get_info): Add parameter info.  Remove parameters
	source, artist, album, track, title, duration and genre.  Update
	users.
	* src/musicdb.c (struct info_cache_entry): Add fields play_count,
	date_added, date_last_played, date_tags_updated, and rating.
	(music_db_get_info): Add parameter info.  Remove parameters
	source, artist, album, track, title, duration and genre.  Get
	information for play_count, date_added, date_last_played,
	date_tags_updated, and rating as per INFO->FIELDS.  Save
	play_count, date_added, date_last_played, date_tags_updated, and
	rating in the cache entry.
	(music_db_set_info): Save play_count, date_added,
	date_last_played, date_tags_updated, and rating in the DB as per
	INFO->FIELDS.
	* src/playlist.h (PL_COL_PLAY_COUNT): Define.
	(PL_COL_DATE_ADDED): Likewise.
	(PL_COL_DATE_LAST_PLAYED): Likewise.
	(PL_COL_DATE_TAGS_UPDATED): Likewise.
	(PL_COL_RATING): Likewise.